# coding-agents-sentry-observability

./: .env.example  .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  package.json  pyproject.toml
.github/workflows/: ci.yml
dashboards/sentry/: agent-vm-observability.json
docs/: ARCHITECTURE.md  CONFIGURATION.md  INSTALL.md  PRIVACY.md  env.example
scripts/: install.sh  npm-postinstall.js  setup-sentry.js
src/agent_vm_observability/: __init__.py  cli.py  config.py  ingest.py  launchd.py  local_dashboard.py  memory.py  model.py  pricing.py  redaction.py  sentry_dashboards.py  sentry_sink.py  state.py  timeutil.py
tests/: test_cli.py  test_config.py  test_ingest.py  test_memory.py  test_pi_ingest.py  test_pricing.py  test_redaction_and_trace.py  test_sentry_dashboards.py  test_sentry_sink.py
