[build-system]
requires = ["hatchling>=1.26"]
build-backend = "hatchling.build"

[project]
name = "coding-agents-mem"
version = "0.1.0"
description = "Local observability and shared memory for Codex, Claude Code, and Pi agent usage."
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
authors = [{ name = "coding-agents-mem contributors" }]
keywords = ["agents", "observability", "sentry", "codex", "claude-code", "pi"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Software Development :: Libraries :: Python Modules",
  "Topic :: System :: Monitoring",
]
dependencies = [
  "sentry-sdk>=2.58.0",
]

[project.optional-dependencies]
dev = [
  "build>=1.2",
  "pytest>=8.0",
]

[project.scripts]
agent-vm = "agent_vm_observability.cli:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.hatch.build.targets.wheel]
packages = ["src/agent_vm_observability"]
